--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "scroll-top",
   "version": "1.0.0",
   "description": "Scroll to top custom element that is revealed after the user has scrolled down.",
-  "main": "src/sroll-to-top.js",
+  "main": "lib/sroll-to-top.js",
   "type": "module",
-  "module": "src/sroll-to-top.js",
+  "module": "lib/sroll-to-top.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "lint": "eslint src/**"
+    "lint": "eslint lib/**",
+    "copy": "node scripts/copy.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "George Raptis<georapbox@gmail.com>",
@@ -23,6 +25,11 @@
     "url": "https://github.com/georapbox/scroll-top/issues"
   },
   "devDependencies": {
-    "eslint": "~8.8.0"
+    "eslint": "~8.8.0",
+    "husky": "~7.0.4"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
   }
 }
