--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scroll-top",
+  "name": "scroll-top-element",
   "version": "1.0.0",
   "description": "A custom element that scrolls to the top of the page.",
   "main": "sroll-top.js",
@@ -21,11 +21,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/georapbox/scroll-top.git"
+    "url": "git+https://github.com/georapbox/scroll-top-element.git"
   },
-  "homepage": "https://github.com/georapbox/scroll-top#readme",
+  "homepage": "https://github.com/georapbox/scroll-top-element#readme",
   "bugs": {
-    "url": "https://github.com/georapbox/scroll-top/issues"
+    "url": "https://github.com/georapbox/scroll-top-element/issues"
   },
   "devDependencies": {
     "eslint": "~8.8.0"
