--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "url": "https://github.com/georapbox/scroll-top-element/issues"
   },
   "devDependencies": {
-    "eslint": "~8.8.0"
+    "eslint": "~8.8.0",
+    "eslint-plugin-wc": "~1.3.2"
   },
   "engines": {
     "node": ">=14.0.0",
