--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,12 @@
   "env": {
     "browser": true,
     "node": true,
-    "es2021": true
+    "es2021": true,
+    "mocha": true
   },
   "extends": [
     "eslint:recommended",
+    "plugin:wc/recommended",
     "plugin:wc/best-practice"
   ],
   "parserOptions": {
