--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "type": "module",
   "module": "sroll-top.js",
   "scripts": {
-    "lint": "eslint scroll-top.js",
-    "demo": "npx http-server ."
+    "lint": "eslint *.js",
+    "demo": "npx http-server .",
+    "test": "web-test-runner",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --coverage"
   },
   "keywords": [
     "custom element",
@@ -28,6 +31,10 @@
     "url": "https://github.com/georapbox/scroll-top-element/issues"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "~4.3.4-fix.0",
+    "@open-wc/testing": "~3.1.2",
+    "@web/test-runner": "~0.13.27",
+    "@web/test-runner-playwright": "~0.8.8",
     "eslint": "~8.8.0",
     "eslint-plugin-wc": "~1.3.2"
   },
