--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "scroll-top-element",
+  "name": "@georapbox/scroll-top-element",
   "version": "1.0.0",
   "description": "A custom element that scrolls to the top of the page.",
-  "main": "sroll-top.js",
+  "main": "dist/sroll-top.min.js",
+  "module": "dist/sroll-top.min.js",
+  "unpkg": "dist/sroll-top.min.js",
   "type": "module",
-  "module": "sroll-top.js",
+  "files": [
+    "/src",
+    "/dist"
+  ],
   "scripts": {
-    "lint": "eslint *.js",
-    "demo": "npx http-server .",
+    "lint": "eslint src/**/*.js",
     "test": "web-test-runner",
     "test:watch": "npm run test -- --watch",
-    "test:coverage": "npm run test -- --coverage"
+    "test:coverage": "npm run test -- --coverage",
+    "build": "rollup -c --environment BUILD:production",
+    "clean": "rimraf dist coverage",
+    "prepare": "npm-run-all clean lint test build"
   },
   "keywords": [
     "custom element",
     "web component",
-    "scroll to top"
+    "scroll-top"
   ],
   "author": {
     "name": "George Raptis",
@@ -36,7 +43,11 @@
     "@web/test-runner": "~0.13.27",
     "@web/test-runner-playwright": "~0.8.8",
     "eslint": "~8.8.0",
-    "eslint-plugin-wc": "~1.3.2"
+    "eslint-plugin-wc": "~1.3.2",
+    "npm-run-all": "~4.1.5",
+    "rimraf": "~3.0.2",
+    "rollup": "~2.70.1",
+    "rollup-plugin-terser": "~7.0.2"
   },
   "engines": {
     "node": ">=14.0.0",
