--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@georapbox/scroll-top-element",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A custom element that scrolls to the top of the page.",
-  "main": "dist/sroll-top.min.js",
-  "module": "dist/sroll-top.min.js",
-  "unpkg": "dist/sroll-top.min.js",
+  "main": "dist/scroll-top.min.js",
+  "module": "dist/scroll-top.min.js",
+  "unpkg": "dist/scroll-top.min.js",
   "type": "module",
   "files": [
     "/src",
