--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "npm-run-all": "~4.1.5",
     "rimraf": "~3.0.2",
     "rollup": "~2.70.1",
-    "rollup-plugin-terser": "~7.0.2"
+    "rollup-plugin-terser": "~7.0.2",
+    "sinon": "~13.0.1"
   },
   "engines": {
     "node": ">=14.0.0",
