--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@georapbox/scroll-top-element",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A custom element that scrolls to the top of the page.",
   "main": "dist/scroll-top.js",
   "module": "dist/scroll-top.js",
@@ -39,10 +39,11 @@
     "test": "web-test-runner",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
-    "dev": "parcel watch",
+    "dev:parcel": "parcel watch",
+    "dev": "npm-run-all clean dev:parcel",
     "build:parcel": "parcel build",
     "build": "npm-run-all clean build:parcel",
-    "clean": "rimraf dist coverage .parcel-cache",
+    "clean": "rimraf dist .parcel-cache",
     "prepare": "npm-run-all clean lint test build"
   },
   "keywords": [
@@ -65,14 +66,14 @@
   },
   "devDependencies": {
     "@esm-bundle/chai": "~4.3.4-fix.0",
-    "@open-wc/testing": "~3.1.7",
-    "@web/test-runner": "~0.15.0",
-    "@web/test-runner-playwright": "~0.9.0",
-    "eslint": "~8.27.0",
-    "eslint-plugin-wc": "~1.3.2",
+    "@open-wc/testing": "~3.1.8",
+    "@web/test-runner": "~0.16.1",
+    "@web/test-runner-playwright": "~0.10.0",
+    "eslint": "~8.40.0",
+    "eslint-plugin-wc": "~1.5.0",
     "npm-run-all": "~4.1.5",
-    "parcel": "~2.8.0",
-    "rimraf": "~3.0.2",
-    "sinon": "~14.0.2"
+    "parcel": "~2.8.3",
+    "rimraf": "~5.0.0",
+    "sinon": "~15.0.4"
   }
 }
